@@ -14,6 +14,7 @@ import org.elasticsearch.logging.LogManager;
 import org.elasticsearch.logging.Logger;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.BBQType;
+import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.BFloat16QueryType;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.DataType;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.Function;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.Operation;
@@ -39,7 +40,8 @@ import static org.elasticsearch.nativeaccess.jdk.LinkerHelper.functionAddressOrN
 
 public final class JdkVectorLibrary implements VectorLibrary {
 
-    static final Logger logger = LogManager.getLogger(JdkVectorLibrary.class);
+    private static final Logger logger = LogManager.getLogger(JdkVectorLibrary.class);
+    private static final int VEC_CAPS_OVERRIDE = getVecCapsOverride();
 
     private record OperationSignature<E extends Enum<E>>(Function function, E dataType, Operation operation) {}
 
@@ -49,7 +51,40 @@ public final class JdkVectorLibrary implements VectorLibrary {
     static final MethodHandle applyCorrectionsMaxInnerProductBulk$mh;
     static final MethodHandle applyCorrectionsDotProductBulk$mh;
 
+    static final MethodHandle bbqApplyCorrectionsEuclideanBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsMaxInnerProductBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsDotProductBulk$mh;
+
     private static final JdkVectorSimilarityFunctions INSTANCE;
+
+    /**
+     * Try to get a vec_caps override value from the {@code es.vec_caps_override} system property.
+     * This value is used to override the vector capabilities value returned by the native call
+     * to {@code vec_caps}; if the override is defined and valid (>= 0), and it is less then the
+     * one returned by {@code vec_caps}, the override is used to determine which functions to bind.
+     * This can be used to force binding to functions from a lower tier (e.g. AVX2 on a AVX-512
+     * capable processor), or to disable native functions completely (by passing 0).
+     * Usage: {@code -Des.vec_caps_override=1}.
+     * For benchmarks, add {@code --jvmArgsPrepend "--add-modules=jdk.incubator.vector -Des.vec_caps_override=..."}
+     * to {@code --args}. Note: {@code --jvmArgsPrepend} on the CLI replaces the {@code @Fork} annotation's
+     * {@code jvmArgsPrepend}, so {@code --add-modules=jdk.incubator.vector} must be included explicitly.
+     *
+     * @return the caps override value, or -1 if the property is not defined or invalid.
+     */
+    private static int getVecCapsOverride() {
+        try {
+            var capsOverrideString = System.getProperty("es.vec_caps_override", "-1");
+            try {
+                return Integer.parseInt(capsOverrideString);
+            } catch (NumberFormatException e) {
+                logger.warn("Invalid es.vec_caps_override value [{}]", capsOverrideString);
+                return -1;
+            }
+        } catch (Throwable t) {
+            logger.warn("Cannot read es.vec_caps_override value", t);
+        }
+        return -1;
+    }
 
     /**
      * Native functions in the native simdvec library can have multiple implementations, one for each "capability level".
@@ -88,9 +123,17 @@ public final class JdkVectorLibrary implements VectorLibrary {
         Map<OperationSignature<?>, MethodHandle> handles = new HashMap<>();
 
         try {
-            int caps = (int) vecCaps$mh.invokeExact();
-            logger.info("vec_caps=" + caps);
-            if (caps > 0) {
+            int vecCaps = (int) vecCaps$mh.invokeExact();
+            final int finalVecCaps;
+            if (VEC_CAPS_OVERRIDE >= 0) {
+                finalVecCaps = Math.min(vecCaps, VEC_CAPS_OVERRIDE);
+                logger.info("vec_caps={}; es.vec_caps_override={}; using [{}]", vecCaps, VEC_CAPS_OVERRIDE, finalVecCaps);
+            } else {
+                finalVecCaps = vecCaps;
+                logger.info("vec_caps=" + finalVecCaps);
+            }
+
+            if (finalVecCaps > 0) {
                 FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
                 FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
                 FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
@@ -105,6 +148,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     ADDRESS
                 );
 
+                FunctionDescriptor bulkSparse = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
+
                 for (Function f : Function.values()) {
                     String funcName = switch (f) {
                         case COSINE -> "cos";
@@ -117,29 +162,57 @@ public final class JdkVectorLibrary implements VectorLibrary {
                             case SINGLE -> "";
                             case BULK -> "_bulk";
                             case BULK_OFFSETS -> "_bulk_offsets";
+                            case BULK_SPARSE -> "_bulk_sparse";
                         };
 
                         for (DataType type : DataType.values()) {
                             // Only byte vectors have cosine
                             // as floats are normalized to unit length to use dot_product instead
                             if (f == Function.COSINE && type != DataType.INT8) continue;
+                            // Only DOT_PRODUCT is needed for int4 — other functions are computed by
+                            // applying correction terms on top of the raw dot product result.
+                            if (f != Function.DOT_PRODUCT && type == DataType.INT4) continue;
+                            // BULK_SPARSE only for INT7U, INT8, and INT4 — no native sparse functions exist for FLOAT32
+                            if (op == Operation.BULK_SPARSE && type == DataType.FLOAT32) continue;
 
                             String typeName = switch (type) {
                                 case INT7U -> "i7u";
+                                case INT4 -> "i4";
                                 case INT8 -> "i8";
                                 case FLOAT32 -> "f32";
                             };
 
                             FunctionDescriptor descriptor = switch (op) {
                                 case SINGLE -> switch (type) {
-                                    case INT7U -> intSingle;
+                                    case INT7U, INT4 -> intSingle;
                                     case INT8, FLOAT32 -> floatSingle;
                                 };
-                                case BULK -> bulk;
+                                case BULK, BULK_SPARSE -> bulk;
                                 case BULK_OFFSETS -> bulkOffsets;
                             };
 
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, caps, descriptor);
+                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
+                            handles.put(new OperationSignature<>(f, type, op), handle);
+                        }
+
+                        for (BFloat16QueryType type : BFloat16QueryType.values()) {
+                            // only byte vectors have cosine
+                            if (f == Function.COSINE) continue;
+                            // BULK_SPARSE not yet implemented for bfloat16
+                            if (op == Operation.BULK_SPARSE) continue;
+
+                            String typeName = switch (type) {
+                                case BFLOAT16 -> "Dbf16Qbf16";
+                                case FLOAT32 -> "Dbf16Qf32";
+                            };
+
+                            FunctionDescriptor descriptor = switch (op) {
+                                case SINGLE -> floatSingle;
+                                case BULK, BULK_SPARSE -> bulk;
+                                case BULK_OFFSETS -> bulkOffsets;
+                            };
+
+                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
                             handles.put(new OperationSignature<>(f, type, op), handle);
                         }
 
@@ -155,11 +228,11 @@ public final class JdkVectorLibrary implements VectorLibrary {
 
                             FunctionDescriptor descriptor = switch (op) {
                                 case SINGLE -> longSingle;
-                                case BULK -> bulk;
+                                case BULK, BULK_SPARSE -> bulk;
                                 case BULK_OFFSETS -> bulkOffsets;
                             };
 
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, caps, descriptor);
+                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
                             handles.put(new OperationSignature<>(f, type, op), handle);
                         }
                     }
@@ -182,13 +255,43 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     ADDRESS // scores
                 );
 
-                applyCorrectionsEuclideanBulk$mh = bindFunction("diskbbq_apply_corrections_euclidean_bulk", caps, score);
-                applyCorrectionsMaxInnerProductBulk$mh = bindFunction("diskbbq_apply_corrections_maximum_inner_product_bulk", caps, score);
-                applyCorrectionsDotProductBulk$mh = bindFunction("diskbbq_apply_corrections_dot_product_bulk", caps, score);
+                applyCorrectionsEuclideanBulk$mh = bindFunction("diskbbq_apply_corrections_euclidean_bulk", finalVecCaps, score);
+                applyCorrectionsMaxInnerProductBulk$mh = bindFunction(
+                    "diskbbq_apply_corrections_maximum_inner_product_bulk",
+                    finalVecCaps,
+                    score
+                );
+                applyCorrectionsDotProductBulk$mh = bindFunction("diskbbq_apply_corrections_dot_product_bulk", finalVecCaps, score);
+
+                // BBQ corrections: per-vector inline layout with nodes array
+                FunctionDescriptor bbqScore = FunctionDescriptor.of(
+                    JAVA_FLOAT,
+                    ADDRESS,     // data (entire vector data segment)
+                    JAVA_INT,    // bulkSize
+                    JAVA_INT,    // vectorSizeInBytes
+                    JAVA_INT,    // pitchInBytes
+                    JAVA_INT,    // dimensions
+                    JAVA_FLOAT,  // queryLowerInterval
+                    JAVA_FLOAT,  // queryUpperInterval
+                    JAVA_INT,    // queryComponentSum
+                    JAVA_FLOAT,  // queryAdditionalCorrection
+                    JAVA_FLOAT,  // queryBitScale
+                    JAVA_FLOAT,  // indexBitScale
+                    JAVA_FLOAT,  // centroidDp
+                    ADDRESS      // scores
+                );
+
+                bbqApplyCorrectionsEuclideanBulk$mh = bindFunction("bbq_apply_corrections_euclidean_bulk", finalVecCaps, bbqScore);
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = bindFunction(
+                    "bbq_apply_corrections_maximum_inner_product_bulk",
+                    finalVecCaps,
+                    bbqScore
+                );
+                bbqApplyCorrectionsDotProductBulk$mh = bindFunction("bbq_apply_corrections_dot_product_bulk", finalVecCaps, bbqScore);
 
                 INSTANCE = new JdkVectorSimilarityFunctions();
             } else {
-                if (caps < 0) {
+                if (finalVecCaps < 0) {
                     logger.warn("""
                         Your CPU supports vector capabilities, but they are disabled at OS level. For optimal performance, \
                         enable them in your OS/Hypervisor/VM/container""");
@@ -197,6 +300,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
                 applyCorrectionsEuclideanBulk$mh = null;
                 applyCorrectionsMaxInnerProductBulk$mh = null;
                 applyCorrectionsDotProductBulk$mh = null;
+                bbqApplyCorrectionsEuclideanBulk$mh = null;
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = null;
+                bbqApplyCorrectionsDotProductBulk$mh = null;
                 INSTANCE = null;
             }
         } catch (Throwable t) {
@@ -262,10 +368,24 @@ public final class JdkVectorLibrary implements VectorLibrary {
             return new AssertionError(msg, t);
         }
 
-        static boolean checkBulk(int elementSize, MemorySegment a, MemorySegment b, int length, int count, MemorySegment result) {
-            Objects.checkFromIndexSize(0, length * count * elementSize, (int) a.byteSize());
-            Objects.checkFromIndexSize(0, length, (int) b.byteSize());
-            Objects.checkFromIndexSize(0, count * Float.BYTES, (int) result.byteSize());
+        static boolean checkBulk(int elementBits, MemorySegment a, MemorySegment b, int length, int count, MemorySegment result) {
+            Objects.checkFromIndexSize(0L, (long) length * count * elementBits / 8, a.byteSize());
+            Objects.checkFromIndexSize(0L, length, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            return true;
+        }
+
+        static boolean checkBFloat16Bulk(
+            int queryElementSize,
+            MemorySegment a,
+            MemorySegment b,
+            int length,
+            int count,
+            MemorySegment result
+        ) {
+            Objects.checkFromIndexSize(0L, (long) length * count * Short.BYTES, a.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * queryElementSize, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             return true;
         }
 
@@ -278,15 +398,31 @@ public final class JdkVectorLibrary implements VectorLibrary {
             MemorySegment result
         ) {
             final int queryBits = 4;
-            Objects.checkFromIndexSize(0, datasetVectorLengthInBytes * count, (int) dataset.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * count, dataset.byteSize());
             // 1 bit data -> x4 bits query, 2 bit data -> x2 bits query
-            Objects.checkFromIndexSize(0, datasetVectorLengthInBytes * (queryBits / dataBits), (int) query.byteSize());
-            Objects.checkFromIndexSize(0, count * Float.BYTES, (int) result.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), query.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            return true;
+        }
+
+        static boolean checkBulkSparse(
+            int elementBits,
+            MemorySegment addresses,
+            MemorySegment b,
+            int length,
+            int count,
+            MemorySegment result
+        ) {
+            long queryBytes = elementBits >= 8 ? (long) length * elementBits / 8 : length;
+            Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
+            Objects.checkFromIndexSize(0L, queryBytes, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBulkSparse(addresses, count, length, elementBits, result);
             return true;
         }
 
         static boolean checkBulkOffsets(
-            int elementSize,
+            int elementBits,
             MemorySegment a,
             MemorySegment b,
             int length,
@@ -295,11 +431,47 @@ public final class JdkVectorLibrary implements VectorLibrary {
             int count,
             MemorySegment result
         ) {
-            if (pitch < length * elementSize) throw new IllegalArgumentException("Pitch needs to be at least " + length);
-            Objects.checkFromIndexSize(0, pitch * count, (int) a.byteSize());
-            Objects.checkFromIndexSize(0, length * elementSize, (int) b.byteSize());
-            Objects.checkFromIndexSize(0, count * Integer.BYTES, (int) offsets.byteSize());
-            Objects.checkFromIndexSize(0, count * Float.BYTES, (int) result.byteSize());
+            long rowBytes = (long) length * elementBits / 8;
+            if (pitch < rowBytes) throw new IllegalArgumentException("Pitch needs to be at least " + rowBytes);
+            Objects.checkFromIndexSize(0L, (long) pitch * count, a.byteSize());
+            Objects.checkFromIndexSize(0L, rowBytes, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Integer.BYTES, offsets.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBulkOffsets(a, offsets, count, length, pitch, result, rowBytes);
+            return true;
+        }
+
+        static boolean checkBFloat16BulkOffsets(
+            int queryElementSize,
+            MemorySegment a,
+            MemorySegment b,
+            int length,
+            int pitch,
+            MemorySegment offsets,
+            int count,
+            MemorySegment result
+        ) {
+            if (pitch < length * Short.BYTES) throw new IllegalArgumentException("Pitch needs to be at least " + length * Short.BYTES);
+            Objects.checkFromIndexSize(0L, (long) pitch * count, a.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * queryElementSize, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Integer.BYTES, offsets.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBulkOffsets(a, offsets, count, length, pitch, result, (long) length * Short.BYTES);
+            return true;
+        }
+
+        static boolean checkBBQBulkSparse(
+            int dataBits,
+            MemorySegment addresses,
+            MemorySegment query,
+            int datasetVectorLengthInBytes,
+            int count,
+            MemorySegment result
+        ) {
+            final int queryBits = 4;
+            Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), query.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             return true;
         }
 
@@ -317,12 +489,81 @@ public final class JdkVectorLibrary implements VectorLibrary {
             if (pitch < datasetVectorLengthInBytes) throw new IllegalArgumentException(
                 "Pitch needs to be at least " + datasetVectorLengthInBytes
             );
-            Objects.checkFromIndexSize(0, datasetVectorLengthInBytes * count, (int) a.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * count, a.byteSize());
             // 1 bit data -> x4 bits query, 2 bit data -> x2 bits query
-            Objects.checkFromIndexSize(0, datasetVectorLengthInBytes * (queryBits / dataBits), (int) b.byteSize());
-            Objects.checkFromIndexSize(0, count * Integer.BYTES, (int) offsets.byteSize());
-            Objects.checkFromIndexSize(0, count * Float.BYTES, (int) result.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Integer.BYTES, offsets.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBBQBulkOffsets(a, offsets, count, datasetVectorLengthInBytes, pitch, result);
             return true;
+        }
+
+        static boolean validateBulkOffsets(
+            MemorySegment a,
+            MemorySegment offsets,
+            int count,
+            int length,
+            int pitch,
+            MemorySegment result,
+            long rowBytes
+        ) {
+            if (count < 0) throw new IllegalArgumentException("count must be non-negative: " + count);
+            if (length <= 0) throw new IllegalArgumentException("length must be positive: " + length);
+            if (pitch <= 0) throw new IllegalArgumentException("pitch must be positive: " + pitch);
+            checkSegmentAlignment(offsets, Integer.BYTES, "offsets", "int");
+            checkSegmentAlignment(result, Float.BYTES, "result", "float");
+            long aSize = a.byteSize();
+            for (int i = 0; i < count; i++) {
+                int offset = offsets.getAtIndex(JAVA_INT, i);
+                Objects.checkFromIndexSize((long) offset * pitch, rowBytes, aSize);
+            }
+            return true;
+        }
+
+        static boolean validateBBQBulkOffsets(
+            MemorySegment a,
+            MemorySegment offsets,
+            int count,
+            int datasetVectorLengthInBytes,
+            int pitch,
+            MemorySegment result
+        ) {
+            if (count < 0) throw new IllegalArgumentException("count must be non-negative: " + count);
+            if (datasetVectorLengthInBytes <= 0) {
+                throw new IllegalArgumentException("datasetVectorLengthInBytes must be positive: " + datasetVectorLengthInBytes);
+            }
+            if (pitch <= 0) throw new IllegalArgumentException("pitch must be positive: " + pitch);
+            checkSegmentAlignment(offsets, Integer.BYTES, "offsets", "int");
+            checkSegmentAlignment(result, Float.BYTES, "result", "float");
+            long aSize = a.byteSize();
+            for (int i = 0; i < count; i++) {
+                int offset = offsets.getAtIndex(JAVA_INT, i);
+                Objects.checkFromIndexSize((long) offset * pitch, datasetVectorLengthInBytes, aSize);
+            }
+            return true;
+        }
+
+        static boolean validateBulkSparse(MemorySegment addresses, int count, int length, int elementBits, MemorySegment result) {
+            if (count < 0) throw new IllegalArgumentException("count must be non-negative: " + count);
+            if (length <= 0) throw new IllegalArgumentException("length must be positive: " + length);
+            checkSegmentAlignment(addresses, Long.BYTES, "addresses", "long");
+            checkSegmentAlignment(result, Float.BYTES, "result", "float");
+            long vectorBytes = elementBits >= 8 ? (long) length * elementBits / 8 : length;
+            for (int i = 0; i < count; i++) {
+                long addr = addresses.getAtIndex(JAVA_LONG, i);
+                if (addr == 0) {
+                    throw new IllegalArgumentException("address at index " + i + " is null");
+                }
+                MemorySegment vec = MemorySegment.ofAddress(addr).reinterpret(vectorBytes);
+                Objects.checkFromIndexSize(0L, vectorBytes, vec.byteSize());
+            }
+            return true;
+        }
+
+        private static void checkSegmentAlignment(MemorySegment segment, int alignment, String name, String type) {
+            if (segment.address() % alignment != 0) {
+                throw new IllegalArgumentException(name + " segment not aligned to " + type + " boundary");
+            }
         }
 
         private static final MethodHandle dotI7uHandle = HANDLES.get(
@@ -330,8 +571,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static int dotProductI7u(MemorySegment a, MemorySegment b, int length) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, length, (int) a.byteSize());
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceInt(dotI7uHandle, a, b, length);
         }
 
@@ -340,9 +581,19 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static int squareDistanceI7u(MemorySegment a, MemorySegment b, int length) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, length, (int) a.byteSize());
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceInt(squareI7uHandle, a, b, length);
+        }
+
+        private static final MethodHandle dotI4Handle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, DataType.INT4, Operation.SINGLE)
+        );
+
+        static int dotProductI4(MemorySegment a, MemorySegment b, int elementCount) {
+            Objects.checkFromIndexSize(0L, 2L * elementCount, a.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, b.byteSize());
+            return callSingleDistanceInt(dotI4Handle, a, b, elementCount);
         }
 
         private static final MethodHandle cosI8Handle = HANDLES.get(
@@ -350,8 +601,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static float cosineI8(MemorySegment a, MemorySegment b, int elementCount) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, elementCount, (int) a.byteSize());
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize());
             return callSingleDistanceFloat(cosI8Handle, a, b, elementCount);
         }
 
@@ -360,8 +611,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static float dotProductI8(MemorySegment a, MemorySegment b, int elementCount) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, elementCount, (int) a.byteSize());
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize());
             return callSingleDistanceFloat(dotI8Handle, a, b, elementCount);
         }
 
@@ -370,8 +621,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static float squareDistanceI8(MemorySegment a, MemorySegment b, int elementCount) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, elementCount, (int) a.byteSize());
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize());
             return callSingleDistanceFloat(squareI8Handle, a, b, elementCount);
         }
 
@@ -380,8 +631,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static float dotProductF32(MemorySegment a, MemorySegment b, int elementCount) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, elementCount, (int) a.byteSize() / Float.BYTES);
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Float.BYTES);
             return callSingleDistanceFloat(dotF32Handle, a, b, elementCount);
         }
 
@@ -390,9 +641,53 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static float squareDistanceF32(MemorySegment a, MemorySegment b, int elementCount) {
-            checkByteSize(a, b);
-            Objects.checkFromIndexSize(0, elementCount, (int) a.byteSize() / Float.BYTES);
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Float.BYTES);
             return callSingleDistanceFloat(squareF32Handle, a, b, elementCount);
+        }
+
+        private static final MethodHandle dotDBF16QF32Handle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, BFloat16QueryType.FLOAT32, Operation.SINGLE)
+        );
+
+        static float dotProductDBF16QF32(MemorySegment a, MemorySegment b, int elementCount) {
+            checkByteSize(a.byteSize(), b.byteSize() / 2);
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Short.BYTES);
+            Objects.checkFromIndexSize(0L, elementCount, b.byteSize() / Float.BYTES);
+            return callSingleDistanceFloat(dotDBF16QF32Handle, a, b, elementCount);
+        }
+
+        private static final MethodHandle dotDBF16QBF16Handle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, BFloat16QueryType.BFLOAT16, Operation.SINGLE)
+        );
+
+        static float dotProductDBF16QBF16(MemorySegment a, MemorySegment b, int elementCount) {
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Short.BYTES);
+            Objects.checkFromIndexSize(0L, elementCount, b.byteSize() / Short.BYTES);
+            return callSingleDistanceFloat(dotDBF16QBF16Handle, a, b, elementCount);
+        }
+
+        private static final MethodHandle squareDBF16QF32Handle = HANDLES.get(
+            new OperationSignature<>(Function.SQUARE_DISTANCE, BFloat16QueryType.FLOAT32, Operation.SINGLE)
+        );
+
+        static float squareDistanceDBF16QF32(MemorySegment a, MemorySegment b, int elementCount) {
+            checkByteSize(a.byteSize(), b.byteSize() / 2);
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Short.BYTES);
+            Objects.checkFromIndexSize(0L, elementCount, b.byteSize() / Float.BYTES);
+            return callSingleDistanceFloat(squareDBF16QF32Handle, a, b, elementCount);
+        }
+
+        private static final MethodHandle squareDBF16QBF16Handle = HANDLES.get(
+            new OperationSignature<>(Function.SQUARE_DISTANCE, BFloat16QueryType.BFLOAT16, Operation.SINGLE)
+        );
+
+        static float squareDistanceDBF16QBF16(MemorySegment a, MemorySegment b, int elementCount) {
+            checkByteSize(a.byteSize(), b.byteSize());
+            Objects.checkFromIndexSize(0L, elementCount, a.byteSize() / Short.BYTES);
+            Objects.checkFromIndexSize(0L, elementCount, b.byteSize() / Short.BYTES);
+            return callSingleDistanceFloat(squareDBF16QBF16Handle, a, b, elementCount);
         }
 
         private static final MethodHandle dotD1Q4Handle = HANDLES.get(
@@ -400,8 +695,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static long dotProductD1Q4(MemorySegment a, MemorySegment query, int length) {
-            Objects.checkFromIndexSize(0, length * 4, (int) query.byteSize());
-            Objects.checkFromIndexSize(0, length, (int) a.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * 4, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceLong(dotD1Q4Handle, a, query, length);
         }
 
@@ -410,8 +705,8 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static long dotProductD2Q4(MemorySegment a, MemorySegment query, int length) {
-            Objects.checkFromIndexSize(0, length * 2, (int) query.byteSize());
-            Objects.checkFromIndexSize(0, length, (int) a.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * 2, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceLong(dotD2Q4Handle, a, query, length);
         }
 
@@ -420,14 +715,14 @@ public final class JdkVectorLibrary implements VectorLibrary {
         );
 
         static long dotProductD4Q4(MemorySegment a, MemorySegment query, int length) {
-            Objects.checkFromIndexSize(0, length, (int) query.byteSize());
-            Objects.checkFromIndexSize(0, length, (int) a.byteSize());
+            Objects.checkFromIndexSize(0L, length, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceLong(dotD4Q4Handle, a, query, length);
         }
 
-        private static void checkByteSize(MemorySegment a, MemorySegment b) {
-            if (a.byteSize() != b.byteSize()) {
-                throw new IllegalArgumentException("Dimensions differ: " + a.byteSize() + "!=" + b.byteSize());
+        private static void checkByteSize(long aSize, long bSize) {
+            if (aSize != bSize) {
+                throw new IllegalArgumentException("Dimensions differ: " + aSize + "!=" + bSize);
             }
         }
 
@@ -527,11 +822,123 @@ public final class JdkVectorLibrary implements VectorLibrary {
             }
         }
 
+        private static float bbqApplyCorrectionsEuclideanBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsEuclideanBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsMaxInnerProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsMaxInnerProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsDotProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsDotProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
         private static final Map<OperationSignature<?>, MethodHandle> HANDLES_WITH_CHECKS;
 
         static final MethodHandle APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
 
         static {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
@@ -561,6 +968,10 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                             type = MethodType.methodType(int.class, MemorySegment.class, MemorySegment.class, int.class);
                                             checkMethod += "I7u";
                                             break;
+                                        case INT4:
+                                            type = MethodType.methodType(int.class, MemorySegment.class, MemorySegment.class, int.class);
+                                            checkMethod += "I4";
+                                            break;
                                         case INT8:
                                             type = MethodType.methodType(float.class, MemorySegment.class, MemorySegment.class, int.class);
                                             checkMethod += "I8";
@@ -568,6 +979,24 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         case FLOAT32:
                                             type = MethodType.methodType(float.class, MemorySegment.class, MemorySegment.class, int.class);
                                             checkMethod += "F32";
+                                            break;
+                                    }
+                                    yield lookup.findStatic(JdkVectorSimilarityFunctions.class, checkMethod, type);
+                                }
+                                case BFloat16QueryType bfq -> {
+                                    MethodType type = MethodType.methodType(
+                                        float.class,
+                                        MemorySegment.class,
+                                        MemorySegment.class,
+                                        int.class
+                                    );
+
+                                    switch (bfq) {
+                                        case BFLOAT16:
+                                            checkMethod += "DBF16QBF16";
+                                            break;
+                                        case FLOAT32:
+                                            checkMethod += "DBF16QF32";
                                             break;
                                     }
                                     yield lookup.findStatic(JdkVectorSimilarityFunctions.class, checkMethod, type);
@@ -608,6 +1037,26 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         MethodHandles.empty(op.getValue().type())
                                     );
                                 }
+                                case BFloat16QueryType bfq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBFloat16Bulk",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bfq.bytes()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
                                 case DataType dt -> {
                                     MethodHandle checkMethod = lookup.findStatic(
                                         JdkVectorSimilarityFunctions.class,
@@ -623,7 +1072,54 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         )
                                     );
                                     yield MethodHandles.guardWithTest(
-                                        MethodHandles.insertArguments(checkMethod, 0, dt.bytes()),
+                                        MethodHandles.insertArguments(checkMethod, 0, dt.bits()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
+                                default -> throw new IllegalArgumentException("Unknown handle type " + op.getKey().dataType());
+                            };
+
+                            handlesWithChecks.put(op.getKey(), handleWithChecks);
+                        }
+                        case BULK_SPARSE -> {
+                            MethodHandle handleWithChecks = switch (op.getKey().dataType()) {
+                                case DataType dt -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBulkSparse",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, dt.bits()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
+                                case BBQType bbq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBBQBulkSparse",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bbq.dataBits()),
                                         op.getValue(),
                                         MethodHandles.empty(op.getValue().type())
                                     );
@@ -657,6 +1153,28 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         MethodHandles.empty(op.getValue().type())
                                     );
                                 }
+                                case BFloat16QueryType bfq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBFloat16BulkOffsets",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bfq.bytes()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
                                 case DataType dt -> {
                                     MethodHandle checkMethod = lookup.findStatic(
                                         JdkVectorSimilarityFunctions.class,
@@ -674,7 +1192,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         )
                                     );
                                     yield MethodHandles.guardWithTest(
-                                        MethodHandles.insertArguments(checkMethod, 0, dt.bytes()),
+                                        MethodHandles.insertArguments(checkMethod, 0, dt.bits()),
                                         op.getValue(),
                                         MethodHandles.empty(op.getValue().type())
                                     );
@@ -719,6 +1237,39 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     "applyCorrectionsDotProductBulk",
                     scoringFunction
                 );
+
+                MethodType bbqScoringFunction = MethodType.methodType(
+                    float.class,
+                    MemorySegment.class,  // data
+                    int.class,            // bulkSize
+                    int.class,            // vectorSizeInBytes
+                    int.class,            // pitchInBytes
+                    int.class,            // dimensions
+                    float.class,          // queryLowerInterval
+                    float.class,          // queryUpperInterval
+                    int.class,            // queryComponentSum
+                    float.class,          // queryAdditionalCorrection
+                    float.class,          // queryBitScale
+                    float.class,          // indexBitScale
+                    float.class,          // centroidDp
+                    MemorySegment.class   // scores
+                );
+
+                BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsEuclideanBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsMaxInnerProductBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsDotProductBulk",
+                    bbqScoringFunction
+                );
             } catch (ReflectiveOperationException e) {
                 throw new AssertionError(e);
             }
@@ -727,6 +1278,14 @@ public final class JdkVectorLibrary implements VectorLibrary {
         @Override
         public MethodHandle getHandle(Function function, DataType dataType, Operation operation) {
             OperationSignature<?> key = new OperationSignature<>(function, dataType, operation);
+            MethodHandle mh = HANDLES_WITH_CHECKS.get(key);
+            if (mh == null) throw new IllegalArgumentException("Signature not implemented: " + key);
+            return mh;
+        }
+
+        @Override
+        public MethodHandle getBFloat16Handle(Function function, BFloat16QueryType queryType, Operation operation) {
+            OperationSignature<?> key = new OperationSignature<>(function, queryType, operation);
             MethodHandle mh = HANDLES_WITH_CHECKS.get(key);
             if (mh == null) throw new IllegalArgumentException("Signature not implemented: " + key);
             return mh;
@@ -753,6 +1312,21 @@ public final class JdkVectorLibrary implements VectorLibrary {
         @Override
         public MethodHandle applyCorrectionsDotProductBulk() {
             return APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsEuclideanBulk() {
+            return BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsMaxInnerProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsDotProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
         }
     }
 }
