@@ -12,6 +12,7 @@ import org.elasticsearch.client.ResponseException;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.elasticsearch.xpack.esql.AssertWarnings;
 import org.elasticsearch.xpack.esql.CsvTestsDataLoader;
+import org.elasticsearch.xpack.esql.approximation.ApproximationPlan;
 import org.elasticsearch.xpack.esql.generator.Column;
 import org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator;
 import org.elasticsearch.xpack.esql.generator.LookupIdx;
@@ -19,6 +20,18 @@ import org.elasticsearch.xpack.esql.generator.LookupIdxColumn;
 import org.elasticsearch.xpack.esql.generator.QueryExecuted;
 import org.elasticsearch.xpack.esql.generator.QueryExecutor;
 import org.elasticsearch.xpack.esql.generator.command.CommandGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.DissectGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.EnrichGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.EvalGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.GrokGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.InlineStatsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.LookupJoinGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.MvExpandGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.RegisteredDomainGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.RenameGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.StatsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.pipe.UriPartsGenerator;
+import org.elasticsearch.xpack.esql.generator.command.source.FromGenerator;
 import org.elasticsearch.xpack.esql.qa.rest.ProfileLogger;
 import org.elasticsearch.xpack.esql.qa.rest.RestEsqlTestCase;
 import org.junit.AfterClass;
@@ -28,7 +41,10 @@ import org.junit.Rule;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
@@ -42,6 +58,7 @@ import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.loadDataSetIntoEs;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_NAME;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_ORIGINAL_TYPES;
 import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.COLUMN_TYPE;
+import static org.elasticsearch.xpack.esql.generator.EsqlQueryGenerator.unquote;
 import static org.elasticsearch.xpack.esql.generator.command.pipe.KeepGenerator.UNMAPPED_FIELD_NAMES;
 import static org.elasticsearch.xpack.esql.generator.command.source.FromGenerator.SET_UNMAPPED_FIELDS_PREFIX;
 
@@ -60,10 +77,27 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         "argument of \\[count.*\\] must",
         "Cannot use field \\[.*\\] with unsupported type \\[.*\\]",
         "Unbounded SORT not supported yet",
+        "MV_EXPAND .* cannot yet have an unbounded SORT .* before it",
         "The field names are too complex to process", // field_caps problem
         "must be \\[any type except counter types\\]", // TODO refine the generation of count()
         "INLINE STATS cannot be used after an explicit or implicit LIMIT command",
         "sub-plan execution results too large",  // INLINE STATS limitations
+        // this comes from mapping-all-types.json and it gets occasionally picked up by full text functions
+        "Inference endpoint not found \\[foo_inference_id\\]",
+        // full-text functions are not allowed to match on fields that come from lookup indices
+        "cannot operate on \\[.*\\], supplied by an index \\[.*\\] in non-STANDARD mode \\[lookup\\]",
+        "Can only use fuzzy queries on keyword and text fields - not on \\[.*\\] which is of type \\[.*\\]",
+        // full-text function receiving a non-boolean value for a boolean type field
+        "Can't parse boolean value \\[.*\\], expected \\[true\\] or \\[false\\]",
+        // full-text function trying to parse text as date field and failing
+        "failed to parse date field \\[.*\\] with format",
+        // full-text function trying to parse a non-IP string
+        "is not an IP string literal",
+        // a values(<that field>) agg could more than 100,000 values into a single multi-valued field, and a subsequent
+        // inline stats … by <that field> hits the hard limit Block.MAX_LOOKUP = 100_000 in the compute layer
+        // throwing IllegalArgumentException via PackedValuesBlockHash
+        // see https://github.com/elastic/elasticsearch/issues/145694
+        "Found a single entry with .* entries",
 
         // Awaiting fixes for query failure
         "Unknown column \\[<all-fields-projected>\\]", // https://github.com/elastic/elasticsearch/issues/121741,
@@ -74,17 +108,20 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         "long overflow", // https://github.com/elastic/elasticsearch/issues/135759
         "can't find input for", // https://github.com/elastic/elasticsearch/issues/136596
         "optimized incorrectly due to missing references", // https://github.com/elastic/elasticsearch/issues/138231
+        // https://github.com/elastic/elasticsearch/issues/142537 for null arguments in clamp() function
         "'field' must not be null in clamp\\(\\)", // clamp/clamp_min/clamp_max reject NULL field from unmapped fields
         "must be \\[boolean, date, ip, string or numeric except unsigned_long or counter types\\]", // type mismatch in top() arguments
-        "unsupported logical plan node \\[Join\\]", // https://github.com/elastic/elasticsearch/issues/141978
-        "Unsupported right plan for lookup join \\[Eval\\]", // https://github.com/elastic/elasticsearch/issues/141870
         "Does not support yet aggregations over constants", // https://github.com/elastic/elasticsearch/issues/118292
-        "illegal data type \\[datetime\\]", // https://github.com/elastic/elasticsearch/issues/142137
-        "Expected to replace a single StubRelation in the plan, but none found", // https://github.com/elastic/elasticsearch/issues/142219
-        "blocks is empty", // https://github.com/elastic/elasticsearch/issues/142473
-        "Overflow to represent absolute value of .*.MIN_VALUE", // https://github.com/elastic/elasticsearch/issues/142642
-        "illegal query_string option \\[boost\\]", // https://github.com/elastic/elasticsearch/issues/142758
         "found value \\[.*\\] type \\[unsupported\\]", // https://github.com/elastic/elasticsearch/issues/142761
+        "Field \\[.*\\] of type \\[.*\\] does not support match.* queries",
+        // https://github.com/elastic/elasticsearch/issues/145570
+        "function cannot operate on \\[from .*\\], which is not a field from an index mapping",
+        // https://github.com/elastic/elasticsearch/issues/145570
+        "function cannot operate on \\[.*\\], which is not a field from an index mapping",
+        "\\[:\\] operator cannot operate on \\[.*\\], which is not a field from an index mapping",
+        "JOIN left field \\[.*\\] of type \\[NULL\\] is incompatible with right", // https://github.com/elastic/elasticsearch/issues/141827
+        // https://github.com/elastic/elasticsearch/issues/141827
+        "JOIN left field \\[.*\\] of type \\[.*\\] is incompatible with right field \\[.*\\] of type \\[NULL\\]",
 
         // Awaiting fixes for correctness
         "Expecting at most \\[.*\\] columns, got \\[.*\\]", // https://github.com/elastic/elasticsearch/issues/129561
@@ -102,12 +139,6 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         "expected named expression for grouping; got ",
         "Time-series aggregations require direct use of @timestamp which was not found. If @timestamp was renamed in EVAL, "
             + "use the original @timestamp field instead.", // https://github.com/elastic/elasticsearch/issues/140607
-        "change point value \\[.*\\] must be numeric", // https://github.com/elastic/elasticsearch/issues/142858
-        // https://github.com/elastic/elasticsearch/issues/142860
-        "(Grok|Dissect) only supports KEYWORD or TEXT values, found expression \\[.*\\] type \\[NULL\\]",
-        // https://github.com/elastic/elasticsearch/issues/142543
-        "Column \\[.*\\] has conflicting data types in FORK branches: \\[NULL\\] and \\[.*\\]",
-        "Column \\[.*\\] has conflicting data types in FORK branches: \\[.*\\] and \\[NULL\\]",
 
         // Ts-command errors awaiting fixes
         "Output has changed from \\[.*\\] to \\[.*\\]" // https://github.com/elastic/elasticsearch/issues/134794
@@ -118,6 +149,10 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         .map(x -> Pattern.compile(x, Pattern.DOTALL))
         .collect(Collectors.toSet());
 
+    private static final Pattern FULL_TEXT_AFTER_SORT_PATTERN = Pattern.compile(
+        ".*\\[(KQL|QSTR)] function cannot be used after SORT.*",
+        Pattern.DOTALL
+    );
     /**
      * Matches "Unknown column [X]" errors, optionally followed by ", did you mean [Y]?".
      * This error is expected when an unmapped field is used after a schema-fixing command (KEEP, DROP, STATS)
@@ -140,11 +175,12 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         Pattern.DOTALL
     );
     /**
-     * Matches "... argument of [X] must be [Y], found value [unmapped_field] type [Z]" errors.
+     * Matches "... argument of [X] must be [Y], found value [Z] type [T]" errors.
      * This happens when an unmapped field ends up with a different data type that doesn't match the one of the function's argument(s).
+     * The unmapped field name may appear either in the function expression(group 1) or in the found-value position (group 2).
      */
     private static final Pattern ANY_TYPE_MISMATCH_PATTERN = Pattern.compile(
-        ".*argument of \\[.*] must be \\[.*], found value \\[([^]]+)] type \\[.*].*",
+        ".*argument of \\[([^]]+)] must be \\[.*], found value \\[([^]]+)] type \\[.*].*",
         Pattern.DOTALL
     );
     /**
@@ -156,19 +192,7 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
             + "|aggregate_metric_double|dense_vector|tdigest|histogram|exponential_histogram|date_range)].*",
         Pattern.DOTALL
     );
-    /**
-     * Matches FIRST(...) or LAST(...) function calls where the second argument is the literal {@code null}.
-     * See https://github.com/elastic/elasticsearch/issues/142180#issuecomment-3913054718
-     */
-    private static final Pattern FIRST_LAST_NULL_ARG_PATTERN = Pattern.compile("(?i)\\b(?:first|last)\\s*\\(.+?,\\s*null\\s*\\)");
-    /**
-     * Matches FIRST(...) or LAST(...) function calls and captures both arguments.
-     * Used to detect when the same field is passed as both the search and sort parameters.
-     * See https://github.com/elastic/elasticsearch/issues/142180
-     */
-    private static final Pattern FIRST_LAST_CALL_PATTERN = Pattern.compile(
-        "(?i)\\b(?:first|last)\\s*\\(\\s*([^,()]+?)\\s*,\\s*([^,()]+?)\\s*\\)"
-    );
+
     private static final Set<String> UNMAPPED_NAMES = Set.of(UNMAPPED_FIELD_NAMES);
 
     @Before
@@ -208,21 +232,35 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
                 public void run(CommandGenerator generator, CommandGenerator.CommandDescription current) {
                     final String command = current.commandString();
 
-                    final QueryExecuted result = previousResult == null
+                    QueryExecuted result = previousResult == null
                         ? execute(command, 0)
                         : execute(previousResult.query() + command, previousResult.depth());
 
+                    // Strip the artificial query approximation columns, that are added after
+                    // query execution, and trailing all other columns. These columns confuse
+                    // follow-up command generation (that try to reference them), and result
+                    // validation (that expect columns added after them).
+                    if (FromGenerator.hasApproximationSettings(result.query())) {
+                        result = stripApproximationColumns(result);
+                    }
+
                     final boolean hasException = result.exception() != null;
-                    if (hasException || checkResults(previousCommands, generator, current, previousResult, result).success() == false) {
+                    if (hasException
+                        || checkPipelineResults(previousCommands, generator, current, previousResult, result, currentSchema)
+                            .success() == false) {
                         if (hasException) {
-                            checkException(result);
+                            List<CommandGenerator.CommandDescription> commands = new ArrayList<>(previousCommands.size() + 1);
+                            commands.addAll(previousCommands);
+                            commands.add(current);
+                            checkPipelineException(result, commands, currentSchema);
                         }
                         continueExecuting = false;
                         currentSchema = List.of();
                     } else {
                         continueExecuting = true;
-                        currentSchema = result.outputSchema();
+                        currentSchema = updateIndexMapped(result.outputSchema(), currentSchema, current);
                     }
+
                     previousCommands.add(current);
                     previousResult = result;
                 }
@@ -275,8 +313,90 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         }
     }
 
+    /**
+     * Strips {@code _approximation_} metadata columns from a {@link QueryExecuted}.
+     */
+    private static QueryExecuted stripApproximationColumns(QueryExecuted qe) {
+        if (qe == null || qe.outputSchema() == null) {
+            return qe;
+        }
+        List<Integer> keepIndices = new ArrayList<>();
+        for (int i = 0; i < qe.outputSchema().size(); i++) {
+            if (qe.outputSchema().get(i).name().startsWith(ApproximationPlan.CONFIDENCE_INTERVAL_COLUMN_PREFIX) == false
+                && qe.outputSchema().get(i).name().startsWith(ApproximationPlan.CERTIFIED_COLUMN_PREFIX) == false) {
+                keepIndices.add(i);
+            }
+        }
+        if (keepIndices.size() == qe.outputSchema().size()) {
+            return qe;
+        }
+        List<Column> schema = keepIndices.stream().map(qe.outputSchema()::get).toList();
+        List<List<Object>> rows = qe.result() == null
+            ? null
+            : qe.result().stream().map(row -> keepIndices.stream().map(row::get).toList()).toList();
+        return new QueryExecuted(qe.query(), qe.depth(), schema, rows, qe.exception());
+    }
+
     protected CommandGenerator sourceCommand() {
         return EsqlQueryGenerator.sourceCommand();
+    }
+
+    protected CommandGenerator.ValidationResult checkPipelineResults(
+        List<CommandGenerator.CommandDescription> previousCommands,
+        CommandGenerator commandGenerator,
+        CommandGenerator.CommandDescription commandDescription,
+        QueryExecuted previousResult,
+        QueryExecuted result,
+        List<Column> currentSchema
+    ) {
+        return checkResults(previousCommands, commandGenerator, commandDescription, previousResult, result, currentSchema);
+    }
+
+    protected void checkPipelineException(
+        QueryExecuted query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        checkException(query, previousCommands, currentSchema);
+    }
+
+    private record FailureContext(
+        String errorMessage,
+        String query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        FailureContext {
+            previousCommands = previousCommands == null ? List.of() : previousCommands;
+            currentSchema = currentSchema == null ? List.of() : currentSchema;
+        }
+    }
+
+    private static final AllowedFailureRule[] ALLOWED_FAILURE_RULES = { ctx -> {
+        for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
+            if (isAllowedError(ctx.errorMessage, allowedError)) {
+                return true;
+            }
+        }
+        return false;
+    },
+        ctx -> isUnmappedFieldError(ctx.errorMessage, ctx.query),
+        ctx -> isScalarTypeMismatchError(ctx.errorMessage),
+        ctx -> isFieldFullTextError(ctx.errorMessage, ctx.query, ctx.previousCommands, ctx.currentSchema),
+        ctx -> isFullTextAfterSampleBug(ctx.errorMessage, ctx.query),
+        ctx -> isFullTextAfterWhereBugs(ctx.errorMessage),
+        ctx -> isLenientFalseFailedToCreateFullTextQueryError(ctx.errorMessage, ctx.query), };
+
+    private static boolean isAllowedFailure(FailureContext ctx) {
+        if (ctx == null || ctx.errorMessage == null) {
+            return false;
+        }
+        for (AllowedFailureRule rule : ALLOWED_FAILURE_RULES) {
+            if (rule.matches(ctx)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     protected static CommandGenerator.ValidationResult checkResults(
@@ -284,7 +404,8 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         CommandGenerator commandGenerator,
         CommandGenerator.CommandDescription commandDescription,
         QueryExecuted previousResult,
-        QueryExecuted result
+        QueryExecuted result,
+        List<Column> currentSchema
     ) {
         CommandGenerator.ValidationResult outputValidation = commandGenerator.validateOutput(
             previousCommands,
@@ -294,41 +415,30 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
             result.outputSchema(),
             result.result()
         );
-        if (outputValidation.success() == false) {
-            for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
-                if (isAllowedError(outputValidation.errorMessage(), allowedError)) {
-                    return outputValidation;
-                }
-            }
-            if (isUnmappedFieldError(outputValidation.errorMessage(), result.query())
-                || isScalarTypeMismatchError(outputValidation.errorMessage())) {
-                return outputValidation;
-            }
-            if (isFirstLastSameFieldError(outputValidation.errorMessage(), result.query())) {
-                return outputValidation;
-            }
-            if (isForkOptimizationBugWithUnmappedFields(outputValidation.errorMessage(), result.query())) {
-                return outputValidation;
-            }
-            fail("query: " + result.query() + "\nerror: " + outputValidation.errorMessage());
-        }
+        failOnUnexpectedValidationError(outputValidation, result, previousCommands, currentSchema);
         return outputValidation;
     }
 
-    protected void checkException(QueryExecuted query) {
-        for (Pattern allowedError : ALLOWED_ERROR_PATTERNS) {
-            if (isAllowedError(query.exception().getMessage(), allowedError)) {
+    protected static void failOnUnexpectedValidationError(
+        CommandGenerator.ValidationResult outputValidation,
+        QueryExecuted result,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        if (outputValidation.success() == false) {
+            if (isAllowedFailure(new FailureContext(outputValidation.errorMessage(), result.query(), previousCommands, currentSchema))) {
                 return;
             }
+            fail("query: " + result.query() + "\nerror: " + outputValidation.errorMessage());
         }
-        if (isUnmappedFieldError(query.exception().getMessage(), query.query())
-            || isScalarTypeMismatchError(query.exception().getMessage())) {
-            return;
-        }
-        if (isFirstLastSameFieldError(query.exception().getMessage(), query.query())) {
-            return;
-        }
-        if (isForkOptimizationBugWithUnmappedFields(query.exception().getMessage(), query.query())) {
+    }
+
+    protected void checkException(
+        QueryExecuted query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        if (isAllowedFailure(new FailureContext(query.exception().getMessage(), query.query(), previousCommands, currentSchema))) {
             return;
         }
         fail("query: " + query.query() + "\nexception: " + query.exception().getMessage());
@@ -338,57 +448,74 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
      * Long lines in exceptions can be split across several lines. When a newline is inserted, the end of the current line and the beginning
      * of the new line are marked with a backslash {@code \}; the new line will also have whitespace before the backslash for aligning.
      */
-    private static final Pattern ERROR_MESSAGE_LINE_BREAK = Pattern.compile("\\\\\n\\s*\\\\");
+    private static final Pattern ERROR_MESSAGE_LINE_BREAK = Pattern.compile("\\\\\r?\n\\s*\\\\");
 
-    private static boolean isAllowedError(String errorMessage, Pattern allowedPattern) {
-        String errorWithoutLineBreaks = ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
+    private static String normalizeErrorMessage(String errorMessage) {
+        return ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
+    }
+
+    protected static boolean isAllowedError(String errorMessage, Pattern allowedPattern) {
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
         return allowedPattern.matcher(errorWithoutLineBreaks).matches();
     }
 
     /**
      * Checks if the error is a known unmapped field error. This covers:
      * <ul>
+     *   <li>"[KQL|QSTR] function cannot be used after SORT" (https://github.com/elastic/elasticsearch/issues/142959)</li>
+     *   <li>"Rule execution limit [100] reached" - can happen with complex plans involving "nullify" unmapped fields
+     *       (https://github.com/elastic/elasticsearch/issues/142390)</li>
      *   <li>"Unknown column [X], did you mean [Y]?" - both X and Y must be unmapped field names</li>
      *   <li>"Unknown column [X]" (no suggestion) - X must be an unmapped field name</li>
      *   <li>"first argument of [X] is [null] so second argument must also be [null] but was [Y]" -
      *       the expression X must contain an unmapped field name (https://github.com/elastic/elasticsearch/issues/142115)</li>
-     *   <li>"Rule execution limit [100] reached" - can happen with complex plans involving "nullify" unmapped fields</li>
+     *
      * </ul>
      */
     private static boolean isUnmappedFieldError(String errorMessage, String query) {
-        if (query.startsWith(SET_UNMAPPED_FIELDS_PREFIX) == false) {
+        return isUnmappedFieldPrefixError(errorMessage, query, SET_UNMAPPED_FIELDS_PREFIX);
+    }
+
+    protected static boolean isUnmappedFieldPrefixError(String errorMessage, String query, String prefix) {
+        if (query.startsWith(prefix) == false) {
             return false;
         }
-        String errorWithoutLineBreaks = ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
-        // Try the more specific pattern first (with suggestion)
-        Matcher matcher = UNKNOWN_COLUMN_WITH_SUGGESTION_PATTERN.matcher(errorWithoutLineBreaks);
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
+        if (errorWithoutLineBreaks.contains("Rule execution limit [100] reached")) {
+            return true;
+        }
+
+        Matcher matcher = FULL_TEXT_AFTER_SORT_PATTERN.matcher(errorWithoutLineBreaks);
+        if (matcher.matches()) {
+            return true;
+        }
+
+        matcher = UNKNOWN_COLUMN_WITH_SUGGESTION_PATTERN.matcher(errorWithoutLineBreaks);
         if (matcher.matches()) {
             String unknownColumn = matcher.group(1);
             String suggestedColumn = matcher.group(2);
             return UNMAPPED_NAMES.contains(unknownColumn) && UNMAPPED_NAMES.contains(suggestedColumn);
         }
-        // Try the simpler pattern (no suggestion)
+
         matcher = UNKNOWN_COLUMN_PATTERN.matcher(errorWithoutLineBreaks);
         if (matcher.matches()) {
             String unknownColumn = matcher.group(1);
             return UNMAPPED_NAMES.contains(unknownColumn);
         }
-        // NULL type mismatch in binary operations involving unmapped fields
+
         matcher = NULL_TYPE_MISMATCH_PATTERN.matcher(errorWithoutLineBreaks);
         if (matcher.matches()) {
             String expression = matcher.group(1);
             return UNMAPPED_NAMES.stream().anyMatch(expression::contains);
         }
-        // a non-NULL type mismatch for an unmapped field name used in a function as argument
+
         matcher = ANY_TYPE_MISMATCH_PATTERN.matcher(errorWithoutLineBreaks);
         if (matcher.matches()) {
-            String expression = matcher.group(1);
-            return UNMAPPED_NAMES.stream().anyMatch(expression::contains);
+            String functionExpression = matcher.group(1);
+            String foundValue = matcher.group(2);
+            return UNMAPPED_NAMES.stream().anyMatch(name -> functionExpression.contains(name) || foundValue.contains(name));
         }
-        // https://github.com/elastic/elasticsearch/issues/142390
-        if (errorWithoutLineBreaks.contains("Rule execution limit [100] reached")) {
-            return true;
-        }
+
         return false;
     }
 
@@ -398,43 +525,265 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
      * These errors are acceptable since the generative tests may compose function calls with fields of these types.
      */
     private static boolean isScalarTypeMismatchError(String errorMessage) {
-        String errorWithoutLineBreaks = ERROR_MESSAGE_LINE_BREAK.matcher(errorMessage).replaceAll("");
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
         return SCALAR_TYPE_MISMATCH_PATTERN.matcher(errorWithoutLineBreaks).matches();
     }
 
-    /**
-     * Checks if the error is an {@code ArrayIndexOutOfBoundsException} caused by calling FIRST or LAST
-     * with problematic arguments.
-     * See <a href="https://github.com/elastic/elasticsearch/issues/142180">#142180</a>
-     */
-    private static boolean isFirstLastSameFieldError(String errorMessage, String query) {
-        if (errorMessage.contains("out of bounds for length") == false) {
-            return false;
-        }
-        if (FIRST_LAST_NULL_ARG_PATTERN.matcher(query).find()) {
-            return true;
-        }
-        Matcher matcher = FIRST_LAST_CALL_PATTERN.matcher(query);
-        while (matcher.find()) {
-            if (matcher.group(1).equals(matcher.group(2))) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static final Pattern FORK_OPTIMIZED_INCORRECTLY_PATTERN = Pattern.compile(
-        ".*Plan \\[.*\\] optimized incorrectly due to missing references \\[_fork.*",
+    private static final Pattern NOT_A_FIELD_FROM_INDEX_PATTERN = Pattern.compile(
+        ".*cannot operate on \\[([^]]+)\\], which is not a field from an index mapping.*",
         Pattern.DOTALL
     );
 
     /**
-     * When {@code SET unmapped_fields="nullify"} is used, the _fork reference can go missing
-     * during plan optimization.
-     * See <a href="https://github.com/elastic/elasticsearch/issues/142762">#142762</a>
+     * Captures fields created by GROK patterns, e.g. {@code %{WORD:foo}} or {@code %{NUMBER:bar:int}}.
      */
-    static boolean isForkOptimizationBugWithUnmappedFields(String errorMessage, String query) {
-        return query.startsWith(SET_UNMAPPED_FIELDS_PREFIX) && FORK_OPTIMIZED_INCORRECTLY_PATTERN.matcher(errorMessage).matches();
+    private static final Pattern GROK_GENERATED_FIELD_PATTERN = Pattern.compile("%\\{[^:}]+:([^}:]+)(?::[^}]+)?}");
+    /**
+     * Captures fields created by DISSECT patterns, e.g. {@code %{foo}}. Ignores skip fields like {@code %{?}} or {@code %{?skip}}.
+     */
+    private static final Pattern DISSECT_GENERATED_FIELD_PATTERN = Pattern.compile("%\\{([^}]+)}");
+
+    /**
+     * Captures both the source and target of a RENAME clause, e.g. {@code old_field AS new_field}.
+     * Group 1 is the source (possibly back-tick quoted), group 2 is the target.
+     */
+    private static final Pattern RENAME_PAIR_PATTERN = Pattern.compile("\\s*(`[^`]+`|[^,\\s]+)\\s+[Aa][Ss]\\s+(`[^`]+`|[^,\\s]+)\\s*");
+
+    /**
+     * Matches {@code | rename X as Y} segments embedded in a LOOKUP JOIN command string.
+     * {@link LookupJoinGenerator} prepends rename commands to align the left-side key columns
+     * with the lookup index key names; these renames are part of a single {@link CommandGenerator.CommandDescription}
+     * and must be accounted for when propagating {@link Column#indexMapped()} flags.
+     */
+    private static final Pattern EMBEDDED_RENAME_PATTERN = Pattern.compile(
+        "(?i)\\|\\s*rename\\s+(`[^`]+`|[^\\s|]+)\\s+as\\s+(`[^`]+`|[^\\s|]+)"
+    );
+
+    /**
+     * Propagates the {@link Column#indexMapped()} flag through the pipeline after a command executes.
+     * <p>
+     * The REST API does not expose attribute-type information, so this method infers it from:
+     * <ul>
+     *   <li>The previous schema (columns carry their {@code indexMapped} status from earlier commands)</li>
+     *   <li>The command description (command name and context — e.g. EVAL stores {@code NEW_COLUMNS})</li>
+     * </ul>
+     * Columns that are explicitly created by the command are marked {@code indexMapped=false};
+     * columns that survive unchanged from the previous schema inherit their previous status.
+     */
+    static List<Column> updateIndexMapped(
+        List<Column> newSchema,
+        List<Column> previousSchema,
+        CommandGenerator.CommandDescription command
+    ) {
+        if (newSchema == null || newSchema.isEmpty()) {
+            return newSchema;
+        }
+        if (previousSchema == null || previousSchema.isEmpty()) {
+            return newSchema;
+        }
+
+        String commandName = command.commandName();
+        if (commandName == null) {
+            return newSchema;
+        }
+        commandName = commandName.toLowerCase(Locale.ROOT);
+
+        Map<String, Boolean> prevMapped = new HashMap<>();
+        for (Column col : previousSchema) {
+            prevMapped.put(col.name(), col.indexMapped());
+        }
+
+        Set<String> createdColumns = new HashSet<>();
+
+        switch (commandName) {
+            case EvalGenerator.EVAL -> {
+                Object newCols = command.context().get(EvalGenerator.NEW_COLUMNS);
+                if (newCols instanceof List<?> list) {
+                    list.forEach(name -> createdColumns.add((String) name));
+                }
+            }
+            case GrokGenerator.GROK -> {
+                Matcher gm = GROK_GENERATED_FIELD_PATTERN.matcher(command.commandString());
+                while (gm.find()) {
+                    createdColumns.add(unquote(gm.group(1)));
+                }
+            }
+            case DissectGenerator.DISSECT -> {
+                Matcher dm = DISSECT_GENERATED_FIELD_PATTERN.matcher(command.commandString());
+                while (dm.find()) {
+                    String generated = dm.group(1);
+                    if (generated.startsWith("?") == false) {
+                        createdColumns.add(unquote(generated));
+                    }
+                }
+            }
+            case MvExpandGenerator.MV_EXPAND -> {
+                String expanded = command.commandString().replaceFirst("(?i)^\\s*\\|\\s*mv_expand\\s+", "").trim();
+                // Not truly a newly created column, but we need to override the indexMapped flag so that full-text functions don't use it.
+                // https://github.com/elastic/elasticsearch/issues/142713
+                createdColumns.add(unquote(expanded));
+            }
+            case StatsGenerator.STATS, InlineStatsGenerator.INLINE_STATS -> {
+                return newSchema.stream().map(col -> new Column(col.name(), col.type(), col.originalTypes(), false)).toList();
+            }
+            case RenameGenerator.RENAME -> {
+                return handleRenameIndexMapped(newSchema, prevMapped, command.commandString());
+            }
+            case RegisteredDomainGenerator.REGISTERED_DOMAIN -> {
+                String prefix = (String) command.context().get("prefix");
+                if (prefix != null) {
+                    for (String subField : List.of("domain", "registered_domain", "top_level_domain", "subdomain")) {
+                        createdColumns.add(prefix + "." + subField);
+                    }
+                }
+            }
+            case UriPartsGenerator.URI_PARTS -> {
+                String prefix = (String) command.context().get("prefix");
+                if (prefix != null) {
+                    for (Column col : newSchema) {
+                        if (col.name().startsWith(prefix + ".")) {
+                            createdColumns.add(col.name());
+                        }
+                    }
+                }
+            }
+            case EnrichGenerator.ENRICH -> {
+                // Enrich fields can shadow existing index columns, so we use the policy's declared enrich_fields
+                // from the context to ensure they are marked as non-index-mapped even when names collide.
+                Object enrichFieldsObj = command.context().get(EnrichGenerator.ENRICH_FIELDS);
+                if (enrichFieldsObj instanceof List<?> enrichFieldsList) {
+                    enrichFieldsList.forEach(name -> createdColumns.add((String) name));
+                }
+            }
+            case LookupJoinGenerator.LOOKUP_JOIN -> {
+                // LookupJoinGenerator embeds RENAME commands before the actual LOOKUP JOIN to align
+                // left-side key columns with lookup index key names. Process these renames so that
+                // fields renamed from non-index-mapped sources correctly inherit indexMapped=false
+                // instead of picking up the old indexMapped status of a same-named existing field.
+                Matcher rm = EMBEDDED_RENAME_PATTERN.matcher(command.commandString());
+                while (rm.find()) {
+                    String oldName = unquote(rm.group(1).trim());
+                    String newName = unquote(rm.group(2).trim());
+                    boolean wasMapped = prevMapped.getOrDefault(oldName, false);
+                    prevMapped.remove(oldName);
+                    prevMapped.put(newName, wasMapped);
+                }
+            }
+            default -> {
+                // For commands that don't create named columns (KEEP, DROP, SORT, LIMIT, WHERE, etc.),
+                // any column not in previous is from the command (e.g. LOOKUP_JOIN, CHANGE_POINT)
+            }
+        }
+
+        return applyIndexMapped(newSchema, createdColumns, prevMapped);
+    }
+
+    private static List<Column> applyIndexMapped(List<Column> schema, Set<String> createdColumns, Map<String, Boolean> prevMapped) {
+        return schema.stream().map(col -> {
+            if (createdColumns.contains(col.name())) {
+                return new Column(col.name(), col.type(), col.originalTypes(), false);
+            }
+            Boolean prev = prevMapped.get(col.name());
+            if (prev != null) {
+                return new Column(col.name(), col.type(), col.originalTypes(), prev);
+            }
+            return new Column(col.name(), col.type(), col.originalTypes(), false);
+        }).toList();
+    }
+
+    private static List<Column> handleRenameIndexMapped(List<Column> newSchema, Map<String, Boolean> prevMapped, String commandString) {
+        Map<String, Boolean> mapped = new HashMap<>(prevMapped);
+        String body = commandString.replaceFirst("(?i)^\\s*\\|\\s*rename\\s+", "");
+        for (String pair : body.split(",")) {
+            Matcher m = RENAME_PAIR_PATTERN.matcher(pair);
+            if (m.matches()) {
+                String oldName = unquote(m.group(1).trim());
+                String newName = unquote(m.group(2).trim());
+                boolean wasMapped = mapped.getOrDefault(oldName, false);
+                mapped.remove(oldName);
+                mapped.put(newName, wasMapped);
+            }
+        }
+        return newSchema.stream().map(col -> {
+            Boolean isMapped = mapped.get(col.name());
+            return new Column(col.name(), col.type(), col.originalTypes(), isMapped != null && isMapped);
+        }).toList();
+    }
+
+    /**
+     * Checks if the error is a full-text function/operator rejecting a field that is not from an index mapping.
+     * Uses the {@link Column#indexMapped()} flag from the current schema when available; falls back to
+     * command-history heuristics otherwise.
+     */
+    static boolean isFieldFullTextError(
+        String errorMessage,
+        String query,
+        List<CommandGenerator.CommandDescription> previousCommands,
+        List<Column> currentSchema
+    ) {
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
+        Matcher m = NOT_A_FIELD_FROM_INDEX_PATTERN.matcher(errorWithoutLineBreaks);
+        if (m.matches() == false) {
+            return false;
+        }
+        String fieldName = unquote(m.group(1));
+
+        if (currentSchema != null && currentSchema.isEmpty() == false) {
+            for (Column col : currentSchema) {
+                if (col.name().equals(fieldName)) {
+                    return col.indexMapped() == false;
+                }
+            }
+            // Field not found in schema — likely a pipeline artifact; allow the error
+            return true;
+        }
+        return false;
+    }
+
+    private static final Pattern FULL_TEXT_AFTER_SAMPLE_PATTERN = Pattern.compile(
+        ".*\\[(KQL|QSTR)] function cannot be used after SAMPLE.*",
+        Pattern.DOTALL
+    );
+
+    /**
+     * SAMPLE should not block QSTR/KQL when it appears after the WHERE containing them, but currently it does.
+     * See https://github.com/elastic/elasticsearch/issues/142694
+     */
+    static boolean isFullTextAfterSampleBug(String errorMessage, String query) {
+        return FULL_TEXT_AFTER_SAMPLE_PATTERN.matcher(normalizeErrorMessage(errorMessage)).matches()
+            && query.toLowerCase(Locale.ROOT).contains("| sample");
+    }
+
+    private static final Pattern FULL_TEXT_AFTER_WHERE_PATTERN = Pattern.compile(
+        ".*(?:(?:\\[(?:KQL|QSTR|MATCH|MatchPhrase)] function)|(?:\\[:\\] operator)) cannot be used after \\(?(?i:WHERE).*",
+        Pattern.DOTALL
+    );
+
+    /**
+     * See https://github.com/elastic/elasticsearch/issues/142705
+     * See https://github.com/elastic/elasticsearch/issues/142710
+     */
+    static boolean isFullTextAfterWhereBugs(String errorMessage) {
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
+        return FULL_TEXT_AFTER_WHERE_PATTERN.matcher(errorWithoutLineBreaks).matches();
+    }
+
+    private static final Pattern MATCH_LENIENT_FALSE_PATTERN = Pattern.compile(
+        "(?i)\\bmatch\\s*\\([^)]*\\{[^}]*[\"']lenient[\"']\\s*:\\s*false[^}]*}[^)]*\\)"
+    );
+    private static final Pattern QSTR_LENIENT_FALSE_PATTERN = Pattern.compile(
+        "(?i)\\bqstr\\s*\\([^)]*\\{[^}]*[\"']lenient[\"']\\s*:\\s*false[^}]*}[^)]*\\)"
+    );
+
+    /**
+     * Work around a query-building failure in full-text functions when options include {@code {"lenient": false}}.
+     */
+    static boolean isLenientFalseFailedToCreateFullTextQueryError(String errorMessage, String query) {
+        String errorWithoutLineBreaks = normalizeErrorMessage(errorMessage);
+        if (errorWithoutLineBreaks.contains("failed to create query: For input string") == false) {
+            return false;
+        }
+        return MATCH_LENIENT_FALSE_PATTERN.matcher(query).find() || QSTR_LENIENT_FALSE_PATTERN.matcher(query).find();
     }
 
     @Override
@@ -465,9 +814,7 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         if (cols == null) {
             return null;
         }
-        return cols.stream()
-            .map(x -> new Column((String) x.get(COLUMN_NAME), (String) x.get(COLUMN_TYPE), originalTypes(x)))
-            .collect(Collectors.toList());
+        return cols.stream().map(x -> new Column((String) x.get(COLUMN_NAME), (String) x.get(COLUMN_TYPE), originalTypes(x))).toList();
     }
 
     @SuppressWarnings("unchecked")
@@ -501,5 +848,9 @@ public abstract class GenerativeRestTest extends ESRestTestCase implements Query
         );
         result.add(new LookupIdx("multi_column_joinable_lookup", multiColumnJoinableLookupKeys));
         return result;
+    }
+
+    private interface AllowedFailureRule {
+        boolean matches(FailureContext ctx);
     }
 }
